# FinanceRAG

./: .gitignore  pyproject.toml
GraphRag/: __init__.py  graph_rag.py
chunkers/: __init__.py  chunker.py  tabular.py
data/: inspect.ipynb
demos/: given_example.ipynb
demos/ConvFinQA/: conv_finqa.ipynb  text.txt
demos/FinDER/: finder.ipynb
demos/FinQA/: conv_finqa.ipynb
demos/FinQABench/: finqa.ipynb
demos/FinanceBench/: finance_bench.ipynb
demos/GraphRag/: demo.ipynb
demos/MultiHiertt/: tatqa.ipynb
demos/TATQA/: d1a711510.txt  tables.json  tatqa.ipynb
financerag/tasks/: BaseTask.py
